--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,68 +57,6 @@ android {
 
 dependencies {
 
-//    implementation "com.google.dagger:hilt-android:2.44"
-//    kapt "com.google.dagger:hilt-android-compiler:2.44"
-//
-//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.32"
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10"
-//
-//    implementation 'androidx.core:core-ktx:1.3.2'
-//    implementation 'androidx.appcompat:appcompat:1.2.0'
-//    implementation 'com.google.android.material:material:1.3.0'
-//    implementation "androidx.compose.ui:ui:$compose_version"
-//    implementation "androidx.compose.material:material:$compose_version"
-//    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-//    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
-//    testImplementation 'junit:junit:4.+'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-//
-//    implementation "androidx.compose.material:material-icons-core:$compose_version"
-//    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04"
-//    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
-//    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha05"
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-//
-//    // Retrofit
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-//    implementation "com.squareup.okhttp3:okhttp:4.9.0"
-//    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
-//
-//    // Timber
-//    implementation 'com.jakewharton.timber:timber:4.7.1'
-//
-//    // Coroutines
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
-//
-//    // Coroutine Lifecycle Scopes
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-//
-//    // Coil
-//    implementation "io.coil-kt:coil:1.1.1"
-//    implementation "com.google.accompanist:accompanist-coil:0.7.0"
-//
-//    //Dagger - Hilt
-//    implementation "com.google.dagger:hilt-android:2.33-beta"
-//    kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
-//    kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
-//
-//
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-//    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-//    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-//    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -157,7 +95,7 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil:1.1.1"
-    implementation "com.google.accompanist:accompanist-coil:0.7.0"
+    implementation("io.coil-kt:coil-compose:2.2.2")
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.44"
